BIS-1715: Parse RO-Crate for writing to Excel